# restful-api-rs

./: Cargo.toml  README.md
docker/: docker-compose.yml
docker/mongodb-seed/: Dockerfile  seed.sh  users.json
src/: db_pool.rs  error.rs  lib.rs  main.rs
src/endpoints/: users.rs
src/middleware/: mod.rs
src/models/: user.rs
src/schemas/: mod.rs  users.rs
src/utils/: mod.rs
src/utils/oauth/: jwt.rs  mod.rs  openid.rs
src/web/: mod.rs  query.rs
