[package]
name = "api"
version = "0.1.0"
authors = ["wicki <krywicki2325@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3"
actix-web-validator = "2.0"
serde={version="1.0", features=["derive"]}
reqwest={version="0.11", features=["json"]}
jsonwebtoken="7.2"
wither = "0.9.0"
futures="0.3"
