[package]
name = "api"
version = "0.1.0"
authors = ["wicki <krywicki2325@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.3"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
reqwest={version="0.11", features=["json"]}
jsonwebtoken="7.2"
wither = "0.9.0"
futures="0.3"
regex="1.5"
serde_urlencoded="0.7"
validator={ version = "0.13", features = ["derive"] }
derive_more={ version="0.99.14", features=["display", "error"] }
